initial commit for pipeline solution, clean up needed